crates/tui-lib/src/devkit/snapshots/mb_tui__devkit__scenario__filtered-build_50x15.snap
---
source: crates/tui-lib/src/devkit/scenario.rs
expression: text
---
┌ Command Palette ───────────────────────────────┐
│> b                                             │
│────────────────────────────────────────────────│
│> Build: Debug                            Ctrl+B│
│  Build: Release                                │
│  Build: Clean                                  │
│  Git: Branch                                   │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│[Root]                                          │
└────────────────────────────────────────────────┘
