crates/tui-lib/src/devkit/snapshots/mb_tui__devkit__scenario__focused-leaf_20x6.snap
---
source: crates/tui-lib/src/devkit/scenario.rs
expression: text
---
⋯▸ lo… ╺━━━━━━━━━━━╸
