crates/tui-lib/src/devkit/snapshots/mb_tui__devkit__scenario__focused-mid_20x6.snap
---
source: crates/tui-lib/src/devkit/scenario.rs
expression: text
---
⋯▸ db… ╺━━━━━━━━━━━╸
    i… ╺━━━━━╸
    r… ╺━━╸
    p… ━
