crates/tui-lib/src/devkit/snapshots/mb_tui__devkit__scenario__focused-mid_80x10.snap
---
source: crates/tui-lib/src/devkit/scenario.rs
expression: text
---
⋯▸ db_query        ╺━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╸
    index_scan     ╺━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╸
    row_fetch      ╺━━━━━━━━━━━━━━━━━━╸
    plan_cache     ╺━━━━╸
