crates/tui-lib/src/devkit/snapshots/mb_tui__devkit__scenario__no-matches_after_50x15.snap
---
source: crates/tui-lib/src/devkit/scenario.rs
expression: text
---
┌ Command Palette ───────────────────────────────┐
│> xyz                                           │
│────────────────────────────────────────────────│
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│[Root]                                          │
└────────────────────────────────────────────────┘
