crates/tui-lib/src/devkit/snapshots/mb_tui__devkit__scenario__pending-delete_50x4.snap
---
source: crates/tui-lib/src/devkit/scenario.rs
expression: text
---
┌ Vim Editor ────────────────────────────────────┐
│mode:NORMAL pending:d cursor:10                 │
│hello world                                     │
└────────────────────────────────────────────────┘
