crates/tui-lib/src/devkit/snapshots/mb_tui__devkit__scenario__submit-behavior_after_50x4.snap
---
source: crates/tui-lib/src/devkit/scenario.rs
expression: text
---
┌ Vim Editor ────────────────────────────────────┐
│mode:INSERT pending:- cursor:0                  │
│                                                │
└────────────────────────────────────────────────┘
