crates/tui-lib/src/devkit/snapshots/mb_tui__devkit__scenario__with-legend_20x6.snap
---
source: crates/tui-lib/src/devkit/scenario.rs
expression: text
---
▾ req… ╺━━━━━━━━━━━╸
  ▸ d… ╺━━━╸
       ■cpu:11%
  ▸ t… ╺━╸
  ▸ a… ━
    l… ━
