crates/tui-lib/src/devkit/snapshots/mb_tui__devkit__scenario__with-legend_80x10.snap
---
source: crates/tui-lib/src/devkit/scenario.rs
expression: text
---
▾ request          ╺━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╸
  ▸ db_query       ╺━━━━━━━━━━━━━━━━━━━━━━━━━╸
                   ■cpu:11% ■io:78% ■mem:7% ■gc:2% ■net:2%
  ▸ template_rend… ╺━━━━━━━━━━━━━━━━╸
  ▸ auth_check     ╺━━━━━━━╸
    logging        ╺━━━━╸
